# ChangeLog for www-apps/moodle
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/moodle/ChangeLog,v 1.55 2014/02/13 15:02:11 blueness Exp $

*moodle-2.6.1 (13 Feb 2014)

  13 Feb 2014; Anthony G. Basile <blueness@gentoo.org> +moodle-2.6.1.ebuild,
  -moodle-2.6.ebuild:
  Version bump 2.6 branch

  13 Feb 2014; Anthony G. Basile <blueness@gentoo.org> -moodle-2.3.11.ebuild:
  Remove legacy version

  13 Feb 2014; Anthony G. Basile <blueness@gentoo.org> -moodle-2.3.10.ebuild,
  -moodle-2.4.7.ebuild, -moodle-2.5.3.ebuild, -moodle-2.6.1.ebuild:
  Cleanup vulnerable versions, bug #501192

*moodle-2.4.8 (12 Jan 2014)
*moodle-2.5.4 (12 Jan 2014)
*moodle-2.6.1 (12 Jan 2014)
*moodle-2.3.11 (12 Jan 2014)

  12 Jan 2014; Anthony G. Basile <blueness@gentoo.org> +moodle-2.3.11.ebuild,
  +moodle-2.4.8.ebuild, +moodle-2.5.4.ebuild, +moodle-2.6.1.ebuild:
  Version bumps

*moodle-2.6 (27 Nov 2013)

  27 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +moodle-2.6.ebuild:
  Version bump 2.6 branch

  12 Nov 2013; Anthony G. Basile <blueness@gentoo.org> -moodle-2.3.9.ebuild,
  -moodle-2.4.6.ebuild, -moodle-2.5.2.ebuild:
  Remove older versions

*moodle-2.5.3 (10 Nov 2013)
*moodle-2.4.7 (10 Nov 2013)
*moodle-2.3.10 (10 Nov 2013)

  10 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +moodle-2.3.10.ebuild,
  +moodle-2.4.7.ebuild, +moodle-2.5.3.ebuild:
  Version bumps

  10 Sep 2013; Anthony G. Basile <blueness@gentoo.org> -moodle-2.3.8.ebuild,
  -moodle-2.4.5.ebuild, -moodle-2.5.1.ebuild:
  Remove vulnerable versions, bug #484492

*moodle-2.3.9 (08 Sep 2013)
*moodle-2.5.2 (08 Sep 2013)
*moodle-2.4.6 (08 Sep 2013)

  08 Sep 2013; Anthony G. Basile <blueness@gentoo.org> +moodle-2.3.9.ebuild,
  +moodle-2.4.6.ebuild, +moodle-2.5.2.ebuild, -moodle-2.2.11.ebuild:
  Version bumps, remove deprecated 2.2 branch

  28 Jul 2013; Anthony G. Basile <blueness@gentoo.org> moodle-2.5.1.ebuild:
  Fix dependence on php, bug #478186
