@@ -5,27 +5,33 @@ AUX config.php 718 SHA256 c62a37c0d81043ee4ca7fc4d7610d19dc2df426d556eb3285d7b1f
 AUX postinstall-en.txt 6524 SHA256 dad8831abc23179ebcd2c2431f11d83346c142175c59da47cf5f913c928de667 SHA512 bb3e5187db6be49707801cfde15ebced065f2d4b8c1a04fef2f4ced0a67dab2440b8e79d110685056cad84647f8ebb587c697452df8e2b0eab07b015d01b92cf WHIRLPOOL 6ed4f9db76238db6e0a2afd98b8877a1de4e06311d77a6153bb9d8bbc559fd226190c7bf4a8053e35000fcb24babf154021a42d1b58ba92c3ee86bb5dfae1894
 AUX postinstall-nodb-en.txt 171 SHA256 f39ff660a1cafbbd96ce18c46f056450ace04df5ac401eeccaf16441d54f3b6a SHA512 b0cf4787351f904caf06573c5bc50275b6a11361170b4006acc24224f44efde69cfe3a9b6340d6787c5805c605dc89f07072bf992b0ee255c97fba90e5d5617e WHIRLPOOL 3f91b917e8c92866d570c0af2dabbb11eb6bdf7d4cf3e9e8984649b5c147736f267156c490ab51fcd7fda9e7b3ac2ead8259231b20e74e349fb143ed44b08616
 DIST moodle-2.4.8.tgz 30514150 SHA256 d7df895031a2c465baf01596f3a3f64dbb07c0c3a8ec576b111466bee7725737 SHA512 d4375529591e356cfd3d2750e4185d7c81b012da6088ff45f202f7e6952f5c408174f99fd2ccab14e9eea9552b16a1170aadac7dcc0c13a5b84e3b07c3c046dd WHIRLPOOL 30d1103c067d72aa9fe3e369b4330af0fe8ab2d0729b03e71006496974e30f011ba590854d1e1ca0782ea61c4508205d29eba7f92722a741de00925e07aab1d4
+DIST moodle-2.4.9.tgz 30694681 SHA256 a7e9f5136f4425b90a56b5f81a1ec8304284605cd6b5f59082ee38826c9299d1 SHA512 88c226bf6bd0c757be438e7a1c2de33efa3a6310d58f6d7e7c05fd69b7d4cdb26ed7988820c3cced9fba0ff4f5a86db6a879772bce72009ad782830134769220 WHIRLPOOL 15b9bffc832d373327b1a7b8fe6c8dbc1cf5095c2dad74e53b9331c7a7a80927058521dda85367952965d6590146aca42f1d1f3586991d82ebb7ea63c9373b2c
 DIST moodle-2.5.4.tgz 32423521 SHA256 dc40032aabe633d37466c1005e794363515bb207182f68255176642fe2018c66 SHA512 ebc6b5bf6dfd7045d834db760efcf9677044fe34bd3c35aa2d837304a734c3e9ff97a6191168c99aadc5e90b08f6973c68259f9074598ace7ef900a5835ac83c WHIRLPOOL bae4ed8dce9d07a04bb30d5d5ff0f5a5621e90f2da3bc1a0a1f885bc2f6f8a2faa85ab825036d975408c6c74796971178ef785b053d0ded5e857a30af2972c24
+DIST moodle-2.5.5.tgz 32483875 SHA256 e2b6ac73851fabbad7287c37b3f25764d4b49a340b2d9da8a2d634cb65b320e5 SHA512 356a7cad7c6ae04e7c2852506a37f259e7c7eb2394868af77f163101ff77e106e7030083eb0ae49828792b446a3c6847d7bd204e7b0c55b3f5a52a157edd5356 WHIRLPOOL 53c6b37703c948e8d76755823aee3a16dc5d2443af3a12dbaffb21dee85154f6942b0a0ed7d53d6556888e3435653f3ec398e3ca27358f4cc0db3c6c9fa96ae5
 DIST moodle-2.6.1.tgz 38847952 SHA256 e7e68665713609fcfd975c402aba6d6d0f4d1fd5b28bd9b2e240c18da1379d47 SHA512 23f67d1735b293f403005eb4a2b91562f21f0052f2341a858813e34bcb5c11734456c3cae44c75655e34c8316a765aee4324b056c762fda04b64842f3a57b9f2 WHIRLPOOL 63e07b07d3f88ff28e16d77f777f9bd2c894056d4f8cb22a7324407b9ef0fa36bd2e7219a2989ed6b2f9bf10c503c9f8398a3a74df87a77d0b69f25e27f5a47f
+DIST moodle-2.6.2.tgz 39293613 SHA256 d78e7e6ead9fab12429d95afe44aa03836caeec142ea262c2c1f8b9f906796bc SHA512 932f3bfc1c0504dbcda31adeb466b53af4678bb37c49226a6031496adbcc294ee4683043889c490fcf3b883f1b3d02e0e9dd2a42e1cf23ed622c07de83e4a4eb WHIRLPOOL 011b76d4a17de31f217c6ff20a002bf08d64e01928eca119ea5f21b999af46088a059977d7c4200598e33eb8da7d75e35a377e84c135e1f623e4f38150d0f365
 EBUILD moodle-2.4.8.ebuild 3357 SHA256 9c3d93bd2b1eef8ff8cb4c20c5fa319dc31c6f4a4f678f0e67ce1c27d334178e SHA512 eb79bdcc97719e93ab7b29cb1fd11d0edb4b42247fd98041e717a4bd3a7c7bfcb2d5c849b11eb8f6bd7d2557628c550af4fd193fbee332e4e235366fde501ae0 WHIRLPOOL 16c9b60579eeea56af15d9fb1e677ffc4884e01ef352c00ad2b276f325a65eff7180f87da98aa98efc2fc2bc2e24ff3dd676f3e0f5758040158f620eea967969
+EBUILD moodle-2.4.9.ebuild 3357 SHA256 25583137cc9ec71408f040bf05de2b9782abad649d4a455b03240aafb298ad56 SHA512 c4be723be6b0f284648e29ff03fba572fd0da15d7e610cd7e334b92880115ecd68caf87556f6f069ca3d41215e40687efc9277238b2416f118fdef03d3293768 WHIRLPOOL f3420936af6d55bff704be800edba56730c37feca16f534e60c2a7f7f0acb3e77c8b16a57f5f4f1070e1131f240d90f965ddaa968711ef54c6c80afc7d2d4358
 EBUILD moodle-2.5.4.ebuild 3359 SHA256 4c50e0cd0772b26b17c6efcfd3fd5001919aab41e64ecc328a613d3725d821d2 SHA512 7b8eb6cf66a867f5498ff8a9877a0e378a5af9c383c1db7188d5ac8fc2ca1d7383a85d52897eae9972fb46356b45a4bc022d047e4e8ff9f88921e4377f647fad WHIRLPOOL da361cf8e4c7ab258d30eaba8ac091242b7c14cefe456429363bb5b8b5740f7521e61f7f5cb7632546d32598cd5874961032691a32da9758155024f4133db0bd
+EBUILD moodle-2.5.5.ebuild 3359 SHA256 ac4b8a6936b49cdb37cb27341cda81f561b06706d51b33cc92b6c7ba3847448c SHA512 d662e38436f8bfe9f5cc77900dd578b84ff81c00bdfcc9f46997faf11dca69b19771bf69bf80eb5493526900f7e889d6783d4566d1b3a8d000fe7d70c6ca9cab WHIRLPOOL 6a39869f0662c48bb2a3b7355dd482be75d5bbbab22abe11737474d8c251f5e2aff7a552ab90fe82609cbfa0d170f19952c2b6921b647e22eb487b92b449ee2f
 EBUILD moodle-2.6.1.ebuild 3359 SHA256 56d148417f4b7eb35f42d79a9cc292f1dfcac8242e278637483b60346078858e SHA512 305eec97447eb9d4e6929d7e8c64a92467f7489e6534e6ffd53b0b8aa433cae26c841037c9bd15a80d00c6785947f1781363c9a8efa188be955c7728d8d212bf WHIRLPOOL 735893ba885c711e8a14fbe3154658ab3f81c60892d6e8ba841272ecff99911719105ae43e9af9a7edda48eee29ff36c0f57565560fd579969a751e59badb11d
-MISC ChangeLog 11394 SHA256 35ad0731596cebf9412f243aab8f037f0ea62889e3cf9a9619434e18d78ba219 SHA512 757bb0277b18a96571be31affd05cfbee51e018409c34d2132544fcf0a2e15ad73dd55ec2f964c25eda4bfdead6a0773f751170b4e4f7d6ebe73d30c5a6af2e9 WHIRLPOOL 15f3b0751d2d243e1f7b0d9e8aef6ace42c82858055a8b07b25e79a998f12f70bdad74e0fd86fb4f2e0178c5846c5641f397f22317cc788a62e13a7dee59d011
+EBUILD moodle-2.6.2.ebuild 3359 SHA256 41eac0cc0438f87239e43b510991c28e89bf3482948166ba49bf363c7e4b73ef SHA512 c7ec18ceab4093f2d11af2ab79c14b6472715551ddc70f26e0a63bcea534ea35c59df32678e2bf5aa105cb20f6beeb6db7f5f25d1759e7312ebf0daacce336c5 WHIRLPOOL f98419ab099dd0c54cb86577180126845502d36857e20ab87a4739792ecdba47ac7521869c6f6e4cd26a05fce0230cfbae15094c43d003a2691022242f71f10c
+MISC ChangeLog 11619 SHA256 245e96a5c67987afc881aa2e605feca0c1d27f5ab3c9a7fd735b858c8bf1e5aa SHA512 ae569dc99987d189a515196a60a031254ae19d3cfa707b12cb2b073e39839f526e634618a8bf4b105b332dac28ba59ce5e6c199df5729597e273d1bd3c45e0bc WHIRLPOOL 15b8f30984da86039fa3a1ef24690260fb5282593a8ada5a012fa1f22c7e019c1413cd77779726dbc01acf6b1ccf2d07a09fa58d40ac5c937cbae263cd775e3e
 MISC metadata.xml 256 SHA256 8230894d717ea9f2e42f9c7de54671126820f89bf05ca96ec5f03842b12378e1 SHA512 b94120ce0ef0ab704cecc6b00d1e0460fe60159b4b7d2fedeefbc9e7b0917ead1637ba2cbe598c67cb9b86d7b0874603e555333f4bba1959e228d33a4cd1b2a5 WHIRLPOOL 8269d207868c3ea1efbf1aed77209b809488b66dc46d6304401435747aa527907fd37be2887d09e116409f1dd56f235d3812a6a7898d25701131a8305a6db5c9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS/N69AAoJEJOE+m71LUu6Pe8P/RUGEuhTBqXuPVTftYYIb2UM
-mXYgHqYjTA9FHz1gsddoNKg1e2sLh3sBarvfQXivnc2+bHwdT0YLEbxvDv249roc
-gB3UIM8up55+HVmB1ic47hQhshde6UrpTryCFyYTQKWi2li2RVEp3mELZ45/ydVJ
-zupDTCUW44SNJHfFXUCtJE9kg+vymWgk7ZiZD8QMpvoSQSbYPoVb46pv87FCMWsH
-9ZcQWriafM7EZasI0moBEXzKFFB+E5GE0AA/tfSEL0iE2raMvbXpKa4K+gGvkVXh
-HEts1pz+N7DbFS6/G2pOk1qILvfCulzT+pI5+5lJCJi8r3CnwgeQylgTOdk36Rwf
-NQcfkBRtUwRF4rSNdMUREsA3m3rux2npxbfcNfTTChnVaHe9NCIFu7MlIqfj7MtP
-SQxXGfjQ377FkMKlFhVN/ybQ37sqriifZ2hgMvJQtSm6gf+uwxzoH/zPRNFK/x+I
-wKXMJ238VRo/U6uc3yxoZrok353vJCBpzZvbE3ExDJ8T+rTJofsYer8mc/FX+Vvc
-Y7sVAYNp7Ms3Rv60PI28qFJDpSQgKgTt8Bf6i7HaiMOUvRJCGWUM1LrWkD8So6a4
-/VrVhWCKLHAOMqEUTgR14JJPjNREdD3bdGDj16Jm7Mk3kfD+6qZ70pgsNbLROpx1
-DefFsuhQ+sV3UleOIPMP
-=sKvL
+iQIcBAEBCAAGBQJTG33FAAoJEJOE+m71LUu6UTUP/jObWtR6RFAA5gFA0zWuY4yJ
+aPmSzaVwD8F/P16VfCpW5RRX76gc5eJCpfxyPV+JLGrcPcWID9Rg9cuunsJMCPnX
+H5Du9Tvy/f8Ug8VZU4/1jG8YXYsxfkIT/6nvHWhtAA0m2ZupFfX1FyB29CnY7IX+
+YY38EVvY5YaVTkUmKdyLHnWbHW5lU0aIoC5ja/BG0JqNWOQhHCEWuerdFKu8TgFn
+ymEdpcPgkCJHaWXGB1B8WDTKa3oICMvRi0hy8xCSZZhQO7GzRo4NEW8xf5H4fMQ8
+sHIz8JQUVFsfq+LwESGMgt8Pxe+V84OUavgsd/6lv0OT2bHVY3J24w9guAMRd0lR
+WI2PfPQcbfm/v3BEw3I9C2arZZUKO+SSwaL/GVdQwORGlUs2aXWegnfIU98MyTeI
+/Az7mq5bjskxmW3SxHCmw+bGeUC+e1dVqsc/6U7m6KctMoH2wwOz7hMw1h9csDwk
+TdzZh1cVEqwjk3vFAYdR7kontwsoVagNBqWZyv6fhDTcSjMb+hg3t2qIsg0RrlmN
+Bf2SYZB7pYYCwtt6FoSG6Cr82jVSG+zeGWEvER2bxTP3VouFAtgto9MElWfoKShs
+2MbciRbWU5PFcsAD28IyFrfty1C3aCVI+AKB1eMsQbr36MYPC+3oh0/OuDoA2Iz2
+PVot+d2zYCuF5m7Fv3qB
+=DYCa
 -----END PGP SIGNATURE-----
