@@ -1,6 +1,14 @@
 # ChangeLog for www-apps/moodle
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/moodle/ChangeLog,v 1.55 2014/02/13 15:02:11 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/moodle/ChangeLog,v 1.56 2014/03/08 20:27:40 blueness Exp $
+
+*moodle-2.4.9 (08 Mar 2014)
+*moodle-2.6.2 (08 Mar 2014)
+*moodle-2.5.5 (08 Mar 2014)
+
+  08 Mar 2014; Anthony G. Basile <blueness@gentoo.org> +moodle-2.4.9.ebuild,
+  +moodle-2.5.5.ebuild, +moodle-2.6.2.ebuild:
+  Version bumps
 
 *moodle-2.6.1 (13 Feb 2014)
 
